--- a/dbtest.html
+++ b/dbtest.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <table border = "1">
-    @@@test@@@
+         <tr>
+            <th>id</th>
+            <th>name</th>
+            <th>password</th>
+        </tr>
+        @@@test@@@
     </table>
 </body>
 </html>
